[package]
name = "zeromq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
] }
zeromq = { version = "0.0.1", path = "../client/zeromq" }
