[package]
name = "sc-mq"
version = "0.0.1"
description = "Substrate Message Queue"
authors = ["code0xff <ian.jungyong.um@gmail.com>"]
edition = "2021"
license = "APACHE-2.0"
repository = "https://github.com/code0xff/mq-support/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
zmq = "0.10.0"
