[package]
name = "sc-mq-publisher"
version = "0.0.1"
edition = "2021"
description = "Example for Substrate Message Queue"
authors = ["code0xff <ian.jungyong.um@gmail.com>"]
license = "APACHE-2.0"
repository = "https://github.com/code0xff/mq-support/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
] }
sc-mq = { version = "0.0.1", path = "../../client/mq" }
